# nam_Pressure_levels

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update-data.yml
catalog/: .gitkeep  catalog.json
data/: .gitkeep
data/nam_conus_pressure_levels.zarr/: .zattrs  .zmetadata
data/nam_conus_pressure_levels.zarr/gh/: .zattrs
data/nam_conus_pressure_levels.zarr/init_time/: .zattrs
data/nam_conus_pressure_levels.zarr/latitude/: 0.0  0.1  1.0  1.1  2.0  2.1  3.0  3.1
data/nam_conus_pressure_levels.zarr/level/: .zattrs  0
data/nam_conus_pressure_levels.zarr/longitude/: .zarray  0.0  0.1  1.0  1.1  2.0  2.1  3.0  3.1
data/nam_conus_pressure_levels.zarr/r/: .zattrs
data/nam_conus_pressure_levels.zarr/step/: .zattrs  0
data/nam_conus_pressure_levels.zarr/t/: .zarray  .zattrs
data/nam_conus_pressure_levels.zarr/time/: 0
data/nam_conus_pressure_levels.zarr/u/: .zattrs
data/nam_conus_pressure_levels.zarr/v/: .zattrs
data/nam_conus_pressure_levels.zarr/valid_time/: 0
data/nam_conus_pressure_levels.zarr/w/: .zattrs
data_summary/: .gitkeep  summary.md
scripts/: check_and_reset_dimensions.py  cleanup_old_forecasts.py  create_summary.py  generate_catalog.py
src/nam_to_zarr/: __init__.py  __main__.py
src/nam_to_zarr/noaa/: __init__.py
src/nam_to_zarr/noaa/nam_conus/: __init__.py  pressure_levels.py
